terraform/shared/modules/network/vpc.tf
# --------------------------------------------------------------------------------
# VPC
# --------------------------------------------------------------------------------

resource "aws_vpc" "this" {
  cidr_block           = var.vpc_cidr
  enable_dns_support   = true
  enable_dns_hostnames = true

  tags = {
    Name = "${var.project_name}-${var.environment}-shared-vpc"
  }
}

# --------------------------------------------------------------------------------
# Internet Gateway
# --------------------------------------------------------------------------------

resource "aws_internet_gateway" "this" {
  vpc_id = aws_vpc.this.id

  tags = {
    Name = "${var.project_name}-${var.environment}-shared-igw"
  }
}
